Fix layout issue with search results

--- a/app/stylesheets/partials/_discuz.sass
+++ b/app/stylesheets/partials/_discuz.sass
@@ -210,3 +210,7 @@ input[type='file']
 
 .form_legend
   font-size: 11px
+
+#games_widget_container, #players_result_container
+  display: block
+  float: none
